<resources>
    <string name="app_name">SaleOn</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="havenotaccount">Already have account?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="select_size">Select size</string>
    <string name="or">Or</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="Select">Select</string>
    <string name="UnSelect">Unselect</string>
    <string name="Size">Size :</string>
    <string name="description">Description :</string>
    <string name="have_not_account">Don\'t have any account?</string>
    <string name="continueasguest">Continue As Guest</string>
    <string name="dummyText">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when
        an unknown printer took a galley of type and scrambled it to make a type specimen book.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when
        an unknown printer took a galley of type and scrambled it to make a type specimen book.
    </string>

    <string name="forgetpasswordmessage">Enter your email associate with this account \n so we can send you email</string>

</resources>
