<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusableInTouchMode="true"
        tools:ignore="Autofill,TextFields">
    <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/svg_back"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            tools:ignore="ContentDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_20sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/myriad_semibold"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:text="@string/forgetpasswordmessage"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/myriad_regular"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
            <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:fontFamily="@font/myriad_regular"/>
        </LinearLayout>
        <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/fill_rounded"
                android:text="@string/submit"
                android:gravity="center"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/white"
                android:fontFamily="@font/myriad_semibold"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>
    </LinearLayout>
</LinearLayout>