<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/svg_back_white"
                    android:layout_centerVertical="true"/>

            <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Jeans"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_toEndOf="@+id/back"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/myriad_bold"
                    android:layout_centerInParent="true"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/select">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp">
                <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fillViewport="true">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                        <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_150sdp"
                                android:id="@+id/image"
                                android:scaleType="centerCrop"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Size"
                                android:id="@+id/text"
                                android:textSize="@dimen/_11sdp"
                                android:gravity="center"
                                android:textColor="@color/colorPrimaryDark"
                                android:fontFamily="@font/myriad_semibold"
                                android:paddingStart="@dimen/_5sdp"
                                android:paddingEnd="@dimen/_10sdp"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingBottom="@dimen/_5sdp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="XL"
                                android:textSize="@dimen/_11sdp"
                                android:gravity="center"
                                android:textColor="@color/textColor"
                                android:fontFamily="@font/myriad_regular"
                                android:paddingStart="@dimen/_15sdp"
                                android:paddingEnd="@dimen/_15sdp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/description"
                                android:textSize="@dimen/_11sdp"
                                android:gravity="center"
                                android:textColor="@color/colorPrimaryDark"
                                android:fontFamily="@font/myriad_semibold"
                                android:paddingStart="@dimen/_5sdp"
                                android:paddingEnd="@dimen/_10sdp"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingBottom="@dimen/_5sdp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dummyText"
                                android:textSize="@dimen/_11sdp"
                                android:textColor="@color/textColor"
                                android:fontFamily="@font/myriad_regular"
                                android:paddingStart="@dimen/_15sdp"
                                android:paddingEnd="@dimen/_15sdp"/>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <Button
                android:id="@+id/select"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/unfill_rounded"
                android:text="@string/Select"
                android:gravity="center"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/myriad_semibold"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>
    </RelativeLayout>
</LinearLayout>